Ajustes de configurações do cypress

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ node_modules/
 jspm_packages/
 1-getting-started/
 2-advanced-examples/
+screenshots/
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
