Adicionado /videos ao gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,7 @@ jspm_packages/
 1-getting-started/
 2-advanced-examples/
 screenshots/
+videos/
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
